# eia-storage-accrual-engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  SECURITY_RESOLUTION.md  create_cli.py  create_cli_final.py  demo_project.py  eia_analysis.py  env.example  example_usage.py  natural_gas_analysis.py  natural_gas_storage_test.csv  pyproject.toml  requirements.txt  test_api_endpoints.py  test_imports.py  test_narratives.py  test_natural_gas.py  test_natural_gas_storage.py  write_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: security-test.yml
cli/: __init__.py  app.py
dashboard/: __init__.py  app.py
data/actuals/: monthly_actuals.csv
docs/: SOP_MONTHLY_CLOSE.md  VERIFICATION_CHECKLIST.md
eia-storage-accrual/: create_dashboard.py
eia-storage-accrual/data/bronze/: eia_capacity.parquet  eia_weekly_storage.parquet
eia-storage-accrual/data/ops/: ops_volumes.csv
eia-storage-accrual/src/eia_sa/accrual/: calculator.py  kpis.py  methods.py
eia-storage-accrual/src/eia_sa/analysis/: __init__.py
eia-storage-accrual/src/eia_sa/cli/: __init__.py  app.py
eia-storage-accrual/src/eia_sa/dashboard/: app.py
eia-storage-accrual/src/eia_sa/transform/: build_gold.py  normalize_capacity.py  normalize_weekly.py
scripts/: seed_bronze.py  setup_env.py
src/eia_sa/: __init__.py  config.py
src/eia_sa/accrual/: __init__.py  calculator.py  kpis.py  methods.py
src/eia_sa/analysis/: __init__.py  narratives.py
src/eia_sa/cli/: __init__.py  app.py
src/eia_sa/dashboard/: app.py
src/eia_sa/ingest/: __init__.py  eia_client.py
src/eia_sa/transform/: __init__.py  build_gold.py  normalize_capacity.py  normalize_weekly.py  schemas.py
src/eia_sa/utils/: __init__.py  excel_pack.py  logging.py
tests/: __init__.py  test_config.py  test_entrypoints.py  test_imports.py  test_narratives.py  test_smoke.py
